# ai-ollama-chroma

./: Amazon_Unlocked_Mobile.csv  README.md  main.py  pyproject.toml  vector.py
chome_langchain_db/: chroma.sqlite3
