[project]
name = "ai-ollama-chroma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub[pandas-datasets]>=0.3.13",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-ollama>=1.0.0",
    "pandas>=2.3.3",
]
